welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:15: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (getX()==(getMondeLargeur()-1) && getY() == (getMondeHauteur-1)) {
  ^